# AoC

./: .ghci  .gitignore  AoC.cabal  AoC.nix  CHANGELOG.md  Cargo.toml  LICENSE  README.md  README.org  default.nix
2018/: AoC.cabal
2018/src/: AoC.hs
2018/src/AoC/Y2018/: Day2.hs  Day3.hs
2021/: .gitignore  AoC.lean  Main.lean  leanpkg.toml
2021/AoC/: Day1.lean  Day2.lean  Day3.lean
2022/: Cargo.toml
2022/src/: main.rs
2022/src/lib/: input.rs  mod.rs  solver.rs
2022/src/solutions/: mod.rs
2022/src/solutions/year_2022/: day1.rs  day2.rs  day3.rs  day4.rs  day5.rs  day6.rs  day7.rs  day8.rs  mod.rs
archive/2021/: AoC.lean  lakefile.lean
src/: AoC.hs  main.rs
src/AoC/Util/: Parser.hs  Util.hs
src/AoC/Y2018/: Day1.hs  Day3.hs  Day4.hs
src/lib/: input.rs  mod.rs  solver.rs
src/solutions/: mod.rs
src/solutions/year_2022/: day1.rs  day10.rs  day11.rs  day12.rs  day2.rs  day22.rs  day3.rs  day4.rs  day5.rs  day6.rs  day7.rs  day8.rs  day9.rs  mod.rs
src/solutions/year_2023/: day10.rs  day2.rs  day3.rs  day4.rs  day5.rs  day6.rs  day7.rs  day8.rs  day9.rs  mod.rs
src/solutions/year_2023/day0/: lakefile.lean  mod.rs
src/solutions/year_2023/day1/: mod.rs
