name:                AoC
version:             0.1.0.0
license:             BSD3
license-file:        LICENSE
author:              Kaushik Chakraborty
maintainer:          git@kaushikc.org
category:            Game
build-type:          Simple
extra-source-files:  CHANGELOG.md, README.org
cabal-version:       >=1.10

library
  default-language:    Haskell2010
  default-extensions:  NoImplicitPrelude

  build-depends:       base <5 && >=3
                     , papa
                     , text
                     , containers

  hs-source-dirs:      src

  exposed-modules:    AoC
                      AoC.Y2018.Day1
